# Data_validation_Module

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  dataframe_config.json  open_question.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
data_validation_module/: __init__.py  dictionaries.py  row_validations.py  src.py  src_prototype.py
git-hooks/config/: .isort.cfg
src/data_validation_module/: __init__.py  __main__.py  row_validations.py
test_files/: dictionary_config.json  test_dataframe_config.json  test_dictionary_config.json  test_json_target.json
tests/: conftest.py  test_row_validation.py  test_src.py
